Added new sections on hyperlink applications in code, updated images in index.html, and added settings for live server port in .vscode/settings.json. Refactored CSS styles for document-toc-link and notecard classes in index.css. Added color variables for primary hover and success in root.css. Added script imports for menu and card components in main.js. Updated title in history.html and added header menu comment.

--- a/history.html
+++ b/history.html
@@ -4,14 +4,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>What are hyperlinks?</title>
+  <title>author</title>
   <meta name="description" content="Hyperlinks, usually called links, are a foundational concept behind the Web. To explain what links are, we need to step back to the very basics of Web architecture.">
   <link rel="stylesheet" href="./assets/css/main.css">
   <script src="../../assets/js/jquery-3.7.1.min.js"></script>
 </head>
 
 <body>
-  <!-- 头部菜单 -->
+  <!-- Header Menu -->
   <use-menu class="menu"></use-menu>
 </body>
 <script src="./components/main.js"></script>
