Update resume page with new styling and links. Reorder sections and update text on resume page.

--- a/author.html
+++ b/author.html
@@ -38,13 +38,13 @@
               <div class="cell">
                 <div class="label">link</div>
                 <div class="text">
-                  <a href="https://www.linkedin.com/in/aria-chen124/" target="_blank" rel="noopener noreferrer">linkedin</a>
+                  <a style="color: #dedede; cursor: cell;" href="https://www.linkedin.com/in/aria-chen124/" target="_blank" rel="noopener noreferrer">LinkedIn</a>
                 </div>
               </div>
               <div class="cell">
                 <div class="label">link</div>
                 <div class="text">
-                  <a href="https://github.com/AriaChen124" target="_blank" rel="noopener noreferrer">github</a>
+                  <a style="color: #dedede; cursor: cell;" href="https://github.com/AriaChen124" target="_blank" rel="noopener noreferrer">Github</a>
                 </div>
               </div>
             </div>
@@ -59,26 +59,26 @@
             <div class="card" style="position: relative; z-index: 1;">
               <use-card>
                 <span slot="header">EDUCATION</span>
-                <div class="title">University of Western Australia</div>
+                <div class="title">Master of Information Technology</div>
                 <div class="content">
                   <div class="text" style="margin-bottom: 14px;">
                     <span>2022-PRESENT</span>
                   </div>
                   <div class="text">
-                    <span>Master of Information Technology</span>
+                    <span>University of Western Australia</span>
                   </div>
                 </div>
               </use-card>
             </div>
             <div class="card" style="transform: translate(-22px, 40px); position: relative; z-index: 0;">
               <use-card hide-header>
-                <div class="title">University of Melbourne</div>
+                <div class="title">Bachelor of Science</div>
                 <div class="content">
                   <div class="text" style="margin-bottom: 14px;">
                     <span>2019-2021</span>
                   </div>
                   <div class="text">
-                    <span>Bachelor of Science</span>
+                    <span>University of Melbourne</span>
                   </div>
                 </div>
               </use-card>
@@ -88,7 +88,7 @@
       </div>
       <div class="name">
         <span style="font-size: 80px; font-weight: 700; margin-right: 28px;">Aria Chen</span>
-        <span style="color: rgba(58, 58, 60, 1); font-size: 24px;">Full-Stack Web Develope</span>
+        <span style="color: rgba(58, 58, 60, 1); font-size: 24px;">Full-Stack Web Developer</span>
       </div>
     </header>
     <main>
@@ -96,26 +96,7 @@
         <use-card>
           <span slot="header">PROFILE</span>
           <div class="content">
-            <p>Current IT student with progressive experience writing code and designing solutions.  Seeking a challenging role as a Software Engineering Intern. Adept at working effectively in fast-paced, deadline-driven settings that demand strong organizational and analytical skills.</p>
-          </div>
-        </use-card>
-      </section>
-      <section>
-        <use-card>
-          <span slot="header">SKILLS</span>
-          <div class="content">
-            <ul>
-              <li class="text">Web frameworks React (JSX, Virtual DOM, Native, Node.js).</li>
-              <li class="text">HTML5, CSS3/SASS.</li>
-              <li class="text">Flask (with Jinja2 templating).</li>
-              <li class="text">CI/CD & DevOps.</li>
-              <li class="text">SEO Integration.</li>
-              <li class="text">Git.</li>
-              <li class="text">Docker.</li>
-              <li class="text">AWS Cloud Services.</li>
-              <li class="text">Communication skills.</li>
-              <li class="text">Teamwork.</li>
-            </ul>
+            <p>Current IT student with progressive experience writing code and designing solutions. Seeking a challenging role as a Software Engineering Intern. Adept at working effectively in fast-paced, deadline-driven settings that demand strong organizational and analytical skills.</p>
           </div>
         </use-card>
       </section>
@@ -125,8 +106,8 @@
           <div class="content">
             <div class="title">
               <span>MOXUE Education Technology Pty Led, Melbourne, VIC</span>
-              <span>Front-end React Developer, Internship</span>
-              <span>Dec 2023 - FEB 2024</span>
+              <span>Front-end React Developer Intern</span>
+              <span>Jan 2024 - FEB 2024</span>
             </div>
             <ul>
               <li class="text">Used understanding of React fundamentals to promote better component lifecycle practices, increasing turnaround speed by 23% with 100% deadline adherence.</li>
@@ -139,11 +120,11 @@
       </section>
       <section>
         <use-card>
-          <span slot="header">Projects</span>
+          <span slot="header">PROJECTS</span>
           <div class="content">
             <div class="title">
-              <span>Little Things for Tiny Tots Charity, Perth,WA</span>
-              <span>Volunteer Training Platform Development</span>
+              <span>Little Things for Tiny Tots Charity, Perth, WA</span>
+              <span>Volunteer Training Platform Project</span>
               <span>July 2023 - Oct 2023</span>
             </div>
             <ul>
@@ -153,6 +134,25 @@
               <li class="text">Designed a dynamic Jinja2 front-end that delivers personalized content based on user roles, enhancing user experience and platform efficiency.</li>
               <li class="text">Introduced a secure logout feature and initiated the front-end design for a file upload page.</li>
               <li class="text">Analyzed user roles and requirements to design a dynamic front-end that delivers personalized content, enhancing user experience and platform </li>
+            </ul>
+          </div>
+        </use-card>
+      </section>
+      <section>
+        <use-card>
+          <span slot="header">SKILLS</span>
+          <div class="content">
+            <ul>
+              <li class="text">Web frameworks React (JSX, Virtual DOM, Native, Node.js).</li>
+              <li class="text">HTML5, CSS3/SASS.</li>
+              <li class="text">Flask (with Jinja2 templating).</li>
+              <li class="text">CI/CD & DevOps.</li>
+              <li class="text">AWS Cloud Services.</li>
+              <li class="text">Git.</li>
+              <li class="text">Docker.</li>
+              <li class="text">SEO Integration.</li>
+              <li class="text">Communication skills.</li>
+              <li class="text">Teamwork.</li>
             </ul>
           </div>
         </use-card>
