Add new three sections on hyperlink history and navigation enhancement. Implement dynamic page transitions and expand hyperlink history narrative. Refine hyperlink history presentation with new sections and animations. Enhance user interface with detailed hyperlink history content.

--- a/history.html
+++ b/history.html
@@ -77,16 +77,81 @@
               </div>
               </p>
               <p>
-                image link
+                image link: 
                 <a href="./index.html" rel="noopener noreferrer">
                   <img style="width: 100px;" src="./assets/image/index/link-1.png" alt="image link" />
                 </a>
               </p>
             </li>
           </ul>
+
+
         </div>
       </div>
-    </div>
+      <div class="page">
+        <div class="content">
+          <div class="title">The Evolution of Hyperlinks</div>
+          <ul>
+            <li>
+              <p>Styles and Interaction - The introduction of CSS (Cascading Style Sheets) allowed developers to
+                customize the style of hyperlinks, including color, size, and mouse hover effects, enhancing user
+                experience.</p>
+              <p class="shaking">
+                <a style="text-decoration: none; color: var(--color-primary); cursor: cell;" href="./index.html"
+                  rel="noopener noreferrer">Click me</a>
+              </p>
+            </li>
+            <li>Multimedia and Reactivity - The widespread use of JavaScript enabled hyperlinks to trigger complex
+              behaviors, such as pop-up windows, animations, and real-time interactions with the server.</li>
+            <li>Social Media and Sharing - The rise of social media platforms made hyperlinks an important tool for
+              sharing content and promoting information.
+              <p>
+                Create a QR code for your personal resume, scan the code to open it And click to enlarge
+                <img style="width: 50px; cursor: pointer;" onclick="picturePreview(this)"
+                  src="./assets/image/history/httpsgithub.comAriaChen124.png" alt="httpsgithub.comAriaChen124">
+              </p>
+            </li>
+            <li>Search Engine Optimization - For better ranking on search engines, the textual relevance of hyperlinks
+              and the target page became crucial.</li>
+          </ul>
+        </div>
+      </div>
+      <div class="page">
+        <div class="content">
+          <div class="title">Application of Hyperlinks in Material Presentation and Organization</div>
+          <ul>
+            <li>Knowledge Organization - In education and academic research, hyperlinks are used to connect relevant
+              concepts and reference materials, facilitating the organization and dissemination of knowledge.
+              <p>
+                <a style="color: var(--color-primary);" href="https://en.m.wikipedia.org/wiki" rel="noopener noreferrer">wikipedia</a>
+              </p>
+            </li>
+            <li>Online Navigation - Hyperlinks serve as navigation tools, helping users quickly jump between websites
+              and pages, improving the efficiency of information retrieval.
+              <p>
+                <a style="color: var(--color-primary);" href="./index.html" rel="noopener noreferrer">To index</a>
+
+              </p>
+            </li>
+            <li>Interactive Storytelling - In the digital media and journalism industry, hyperlinks are used to create
+              interactive stories, allowing users to delve deeper into more details according to their interests.</li>
+          </ul>
+        </div>
+      </div>
+      <div class="page">
+        <div class="content">
+          <div class="title">Hyperlink restricted</div>
+          <p>Recent innovations such as Single Page Applications (SPAs), mobile apps, and social media are changing the
+            way we use hyperlinks, which may, to some extent, undermine hyperlinks and the user autonomy they support.
+            In SPAs, user interactions with the page no longer require the entire page to be reloaded, reducing the use
+            of hyperlinks in the traditional sense. Mobile apps, through their built-in navigation and interface design,
+            allow users to transition within the app rather than through hyperlinks. Social media platforms, with their
+            closed content ecosystems, restrict the flow of external links, thus also affecting the traditional function
+            of hyperlinks. These changes may limit users' ability to freely explore the internet, as they are more
+            directed in consuming information along specific paths.</p>
+
+        </div>
+      </div>
   </main>
   <!-- <footer>
     <p><cite>This article is cited from <a href="https://en.m.wikipedia.org/wiki/Hyperlink" target="_blank"
