Change subtitles to imporve the readability.

--- a/index.html
+++ b/index.html
@@ -23,11 +23,10 @@
             <h2 class="document-toc-heading">Anchors nav</h2>
           </header>
           <ul class="document-toc-list">
-            <li class="document-toc-item"><a class="document-toc-link" href="#summary" aria-current="true">Summary</a>
+            <li class="document-toc-item"><a class="document-toc-link" href="#overview" aria-current="true">Overview</a>
             </li>
-            <li class="document-toc-item"><a class="document-toc-link" href="#typesOfLinks">Types of links</a></li>
-            <li class="document-toc-item"><a class="document-toc-link" href="#applicationsInCode">Applications in
-                code</a></li>
+            <li class="document-toc-item"><a class="document-toc-link" href="#typesOfHyperlinks">Types of Hyperlinks</a></li>
+            <li class="document-toc-item"><a class="document-toc-link" href="#implentationInHTML">Hyperlink Implentation</a></li>
           </ul>
         </section>
       </div>
@@ -36,9 +35,9 @@
       <header>
         <h1>What are hyperlinks?</h1>
       </header>
-      <section aria-labelledby="summary">
+      <section aria-labelledby="overview">
         <use-card>
-          <div id="summary" class="card-header" slot="header"><a href="#summary">Summary</a></div>
+          <div id="overview" class="card-header" slot="header"><a href="#overview">Overview</a></div>
           <div class="content">
             <div class="section-content">
               <p>Hyperlinks, usually called links, are a foundational concept behind the Web. To explain what links are,
@@ -126,9 +125,9 @@
           </div>
         </use-card>
       </section>
-      <section aria-labelledby="typesOfLinks">
+      <section aria-labelledby="typesOfHyperlinks">
         <use-card>
-          <div id="typesOfLinks" class="card-header" slot="header"><a href="#typesOfLinks">Types of links</a></div>
+          <div id="typesOfHyperlinks" class="card-header" slot="header"><a href="#typesOfHyperlinks">Types of Hyperlinks</a></div>
           <div class="section-content">
             <dl>
               <dt id="internal_link"><a href="#internal_link">Internal link</a></dt>
@@ -165,17 +164,16 @@
                     loading="lazy">
                 </p>
                 <h3>Go ahead and give it a try</h3>
-                <p class="shaking"><a href="#summary"># Click me</a></p>
+                <p class="shaking"><a href="#overview"># Click me</a></p>
               </dd>
             </dl>
 
           </div>
         </use-card>
       </section>
-      <section aria-labelledby="applicationsInCode">
+      <section aria-labelledby="implentationInHTML">
         <use-card>
-          <div id="applicationsInCode" class="card-header" slot="header"><a href="#applicationsInCode">Applications in
-              code</a></div>
+          <div id="implentationInHTML" class="card-header" slot="header"><a href="#implentationInHTML">Hyperlink Implentation in HTML</a></div>
           <div class="section-content">
             <p>A basic link is created by wrapping the text or other content inside an <a
                 href="/en-US/docs/Web/HTML/Element/a"><code>&lt;a&gt;</code></a> element and using the <a
